--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
   google_fonts: ^6.2.1
-  freezed: ^2.5.7
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   shimmer: ^3.0.0
   auto_route: ^9.2.2
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +56,7 @@ dev_dependencies:
   build_runner: ^2.4.13
   hive_generator: ^2.0.1
   auto_route_generator: ^9.0.0
+  freezed: ^2.5.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
