--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
   google_fonts: ^6.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  shimmer: ^3.0.0
   auto_route: ^9.2.2
   freezed_annotation: ^2.4.4
+  easy_sticky_header: ^1.1.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
