--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   freezed_annotation: ^2.4.4
   easy_sticky_header: ^1.1.1
   intl: ^0.19.0
+  table_calendar: ^3.1.2
+  numberpicker: ^2.1.2
 
 dev_dependencies:
   flutter_test:
